// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Icon /> snapshot should match snapshot 1`] = `
<Icon
  name="accessibility"
>
  <div
    className="md-icon-wrapper"
  >
    <svg
      className=""
      data-autoscale={false}
      data-scale={32}
      data-test="accessibility"
      fill="currentColor"
      height="100%"
      style={Object {}}
      viewBox="0, 0, 32, 32"
      width="100%"
    />
  </div>
</Icon>
`;

exports[`<Icon /> snapshot should match snapshot with autoScale set to 'true' 1`] = `
<Icon
  autoScale={true}
  name="accessibility"
>
  <div
    className="md-icon-wrapper"
  >
    <svg
      className=""
      data-autoscale={true}
      data-scale={false}
      data-test="accessibility"
      fill="currentColor"
      height="100%"
      style={Object {}}
      viewBox="0, 0, 32, 32"
      width="100%"
    />
  </div>
</Icon>
`;

exports[`<Icon /> snapshot should match snapshot with autoScale set to a percentage value 1`] = `
<Icon
  autoScale={150}
  name="accessibility"
>
  <div
    className="md-icon-wrapper"
  >
    <svg
      className=""
      data-autoscale={150}
      data-scale={false}
      data-test="accessibility"
      fill="currentColor"
      height="100%"
      style={Object {}}
      viewBox="0, 0, 32, 32"
      width="100%"
    />
  </div>
</Icon>
`;

exports[`<Icon /> snapshot should match snapshot with className 1`] = `
<Icon
  className="example-class"
  name="accessibility"
>
  <div
    className="md-icon-wrapper example-class"
  >
    <svg
      className=""
      data-autoscale={false}
      data-scale={32}
      data-test="accessibility"
      fill="currentColor"
      height="100%"
      style={Object {}}
      viewBox="0, 0, 32, 32"
      width="100%"
    />
  </div>
</Icon>
`;

exports[`<Icon /> snapshot should match snapshot with color 1`] = `
<Icon
  color="red"
  name="accessibility"
>
  <div
    className="md-icon-wrapper"
  >
    <svg
      className=""
      data-autoscale={false}
      data-scale={32}
      data-test="accessibility"
      height="100%"
      style={
        Object {
          "fill": "red",
          "stroke": "red",
        }
      }
      viewBox="0, 0, 32, 32"
      width="100%"
    />
  </div>
</Icon>
`;

exports[`<Icon /> snapshot should match snapshot with fillColor 1`] = `
<Icon
  fillColor="red"
  name="accessibility"
>
  <div
    className="md-icon-wrapper"
  >
    <svg
      className=""
      data-autoscale={false}
      data-scale={32}
      data-test="accessibility"
      height="100%"
      style={
        Object {
          "fill": "red",
        }
      }
      viewBox="0, 0, 32, 32"
      width="100%"
    />
  </div>
</Icon>
`;

exports[`<Icon /> snapshot should match snapshot with id 1`] = `
<Icon
  id="example-id"
  name="accessibility"
>
  <div
    className="md-icon-wrapper"
    id="example-id"
  >
    <svg
      className=""
      data-autoscale={false}
      data-scale={32}
      data-test="accessibility"
      fill="currentColor"
      height="100%"
      style={Object {}}
      viewBox="0, 0, 32, 32"
      width="100%"
    />
  </div>
</Icon>
`;

exports[`<Icon /> snapshot should match snapshot with invalid name 1`] = `
<Icon
  name="invalid_icon_name"
>
  <div
    className="md-icon-wrapper"
  >
    <div
      className="md-icon-not-found"
      data-autoscale={false}
      data-scale={32}
    >
      ⃞
    </div>
  </div>
</Icon>
`;

exports[`<Icon /> snapshot should match snapshot with scale 1`] = `
<Icon
  name="accessibility"
  scale={16}
>
  <div
    className="md-icon-wrapper"
  >
    <svg
      className=""
      data-autoscale={false}
      data-scale={16}
      data-test="accessibility"
      fill="currentColor"
      height="100%"
      style={Object {}}
      viewBox="0, 0, 32, 32"
      width="100%"
    />
  </div>
</Icon>
`;

exports[`<Icon /> snapshot should match snapshot with small icons 1`] = `
<Icon
  name="info-badge"
  scale={14}
>
  <div
    className="md-icon-wrapper"
  >
    <svg
      className=""
      data-autoscale={false}
      data-scale={14}
      data-test="info-badge"
      fill="currentColor"
      height="100%"
      style={Object {}}
      viewBox="0, 0, 14, 14"
      width="100%"
    />
  </div>
</Icon>
`;

exports[`<Icon /> snapshot should match snapshot with strokeColor 1`] = `
<Icon
  name="accessibility"
  strokeColor="red"
>
  <div
    className="md-icon-wrapper"
  >
    <svg
      className=""
      data-autoscale={false}
      data-scale={32}
      data-test="accessibility"
      fill="currentColor"
      height="100%"
      style={
        Object {
          "stroke": "red",
        }
      }
      viewBox="0, 0, 32, 32"
      width="100%"
    />
  </div>
</Icon>
`;

exports[`<Icon /> snapshot should match snapshot with style 1`] = `
<Icon
  name="accessibility"
  style={
    Object {
      "color": "pink",
    }
  }
>
  <div
    className="md-icon-wrapper"
    style={
      Object {
        "color": "pink",
      }
    }
  >
    <svg
      className=""
      data-autoscale={false}
      data-scale={32}
      data-test="accessibility"
      fill="currentColor"
      height="100%"
      style={Object {}}
      viewBox="0, 0, 32, 32"
      width="100%"
    />
  </div>
</Icon>
`;

exports[`<Icon /> snapshot should match snapshot with weight 1`] = `
<Icon
  name="accessibility"
  weight="light"
>
  <div
    className="md-icon-wrapper"
  >
    <svg
      className=""
      data-autoscale={false}
      data-scale={32}
      data-test="accessibility"
      fill="currentColor"
      height="100%"
      style={Object {}}
      viewBox="0, 0, 32, 32"
      width="100%"
    />
  </div>
</Icon>
`;
